[package]
name = "rchc"
version = "1.0.0"
authors = ["Timothée Haudebourg <timothee.haudebourg@irisa.fr>"]
edition = "2018"

[dependencies]
log = "0.4.1"
stderrlog = "0.4.1"
clap = { version = "~2.27.0", features = ["yaml"] }
rand = "0.7.0"
utf8-decode = "1.0.1"
source-span = "1.3.0"
const-vec = "1.0.1"
once_cell = "1.2.0"
smt2 = "0.1.0"
terms = "0.1.2"
tree-automata = "0.1.1"
automatic-relations = "0.2.0"
crossbeam-channel = "0.3.9"
crossbeam-utils = "0.6.6"
rust-embed = "5.0.1"
