[package]
name = "rchc"
version = "1.1.0"
authors = ["Timothée Haudebourg <timothee.haudebourg@irisa.fr>"]
edition = "2018"

[dependencies]
log = "^0.4"
stderrlog = "^0.4"
clap = { version = "~2.27.0", features = ["yaml"] }
rand = "^0.7"
utf8-decode = "^1.0"
source-span = "^2.2"
const-vec = "^1.0"
once_cell = "^1.2"
smt2 = "0.2.0"
terms = "^0.1"
tree-automata = "^0.1"
automatic-relations = "^0.2"
crossbeam-channel = "^0.3"
crossbeam-utils = "^0.6"
rust-embed = "^5.0"
